--- a/ImageDistortion/Properties/Resources.resx
+++ b/ImageDistortion/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="mai_lan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mai_lan.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mai_lan1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mai_lan1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
